# sharehub

./: .gitignore  README.md
app/api/: routes_auth.py  routes_health.py  routes_listings.py
app/core/: config.py
app/models/: __init__.py  user.py
backend/: .env  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: db.py  main.py
backend/app/api/: routes_auth.py  routes_listings.py
backend/app/core/: auth.py  config.py
backend/app/models/: listing.py  user.py
backend/app/schemas/: auth.py  listing.py
frontend/: README.md  index.html  styles.css
frontend/sharehub/: app.jsx  data.jsx  home.jsx  list.jsx  profile.jsx  rent.jsx  ui.jsx
