[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "google-auth==2.40.3",
    "greenlet>=3.4.0",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "requests>=2.33.1",
    "sqlalchemy==2.0.42",
    "uvicorn[standard]==0.35.0",
]
